--- a/app/views/lsoa_matchers/_form.html.erb
+++ b/app/views/lsoa_matchers/_form.html.erb
@@ -19,11 +19,13 @@
   <div>
     <%= form.label :match_strings, style: "display: block" %>
     <%= form.text_field :match_strings %>
+    JSON array expected
   </div>
 
   <div>
     <%= form.label :extra_postcodes, style: "display: block" %>
     <%= form.text_field :extra_postcodes %>
+    JSON array expected
   </div>
 
   <div>
