--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <table>
   <% if LsoaMatcher.count > 0 %>
     <tr>
-      <td><%= link_to "Postcode query", lsoa_matchers_path %></td>
+      <td><%= link_to "Postcode query", postcode_query_index_path %></td>
     </tr>
   <% end %>
   <tr>
