--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Home</h1>
 
 
+<p>
+  First set up an LSOA matcher, then test it using the postocde query form
+</p>
+
 <table>
   <% if LsoaMatcher.count > 0 %>
     <tr>
