--- a/app/views/lsoa_matchers/_form.html.erb
+++ b/app/views/lsoa_matchers/_form.html.erb
@@ -19,13 +19,13 @@
   <div>
     <%= form.label :match_strings, style: "display: block" %>
     <%= form.text_field :match_strings %>
-    JSON array expected
+    JSON array expected, e.g. ["Soutwark", "Lambeth"]
   </div>
 
   <div>
     <%= form.label :extra_postcodes, style: "display: block" %>
     <%= form.text_field :extra_postcodes %>
-    JSON array expected
+    JSON array expected, e.g. ["SH24 1AA", "SH24 1AB"]
   </div>
 
   <div>
