--- a/app/views/lsoa_matchers/_form.html.erb
+++ b/app/views/lsoa_matchers/_form.html.erb
@@ -19,7 +19,7 @@
   <div>
     <%= form.label :match_strings, style: "display: block" %>
     <%= form.text_field :match_strings %>
-    JSON array expected, e.g. ["Soutwark", "Lambeth"]
+    JSON array expected, e.g. ["Southwark", "Lambeth"]
   </div>
 
   <div>
